@@ -14,6 +14,12 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- Added map.base parameter that can be set to control where files with relative paths should be interpreted
+  from when a map is loaded from a string or saved to a string. It defaults to an empty string which means
+  that the base path will be the current working directory of the mapnik process. When a stylesheet is read
+  from a file that files directory is used. And a custom value can still be passed as an argument to 
+  load_map_from_string().
+
 - Added python function 'render_grid' to allow conversion of grid buffer to python object containing list of grid
   pixels, list of keys, and a and dictionary of feature attributes.
 
